microk8s/yamls/deployment.yaml
kind: Pod
apiVersion: v1
metadata:
  name: ${SITE_NAME}
  labels:
    app: ${SITE_NAME}
spec:
  volumes:
    - name: subdomain-vol
      persistentVolumeClaim:
        claimName: subdomain-pvc
  restartPolicy: Always
  containers:
    - name: web
      image: opentaproject/lti13-simulator-full:latest
      command: ["/bin/bash","-c"] 
      args:
        - ln -s /data/.ssh /root/.ssh;
          git remote set-url origin git@github.com:opentaproject/lti13-platform-simulator.git;
          git checkout development && git fetch origin && git reset --hard origin/development && git clean -fd;
          python manage.py migrate ;
          ( yes yes | python manage.py collectstatic ) ;
          /usr/local/bin/supervisord -c /srv/lti13-simulator/supervisord.conf ;
      resources: {}
      volumeMounts:
        - mountPath: /data
          name: subdomain-vol
          subPath: data/${SITE_NAME}

    - name: nginx
      image: opentaproject/tennis-nginx:latest
      imagePullPolicy: Always
      ports: 
        - containerPort: 8080
      volumeMounts:
        - mountPath: /data
          name: subdomain-vol
          subPath: data/${SITE_NAME}
