microk8s/yamls/ingress-tennis-sleeping.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tennis-sleeping
  annotations:
        nginx.ingress.kubernetes.io/permanent-redirect: "https://cdn.${SITE_NAME}.net/vaknar.html"


spec:
  tls:
    - hosts:
      - ${SITE_NAME}.net       #EDIT
      secretName: ${SITE_NAME}-tls
  ingressClassName: nginx

  rules:
    - host: "${SITE_NAME}.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: ${SITE_NAME}
                  port:
                    name:  http
